@@ -126,12 +126,6 @@ RELEASE SHOWSTOPPERS:
 PATCHES ACCEPTED TO BACKPORT FROM TRUNK:
   [ start all new proposals below, under PATCHES PROPOSED. ]
 
-  *) http: Fix possible empty response with mod_ratelimit for HEAD requests.
-     trunk patch: https://svn.apache.org/r1854004
-     2.4.x patch: svn merge -c 1854004 ^/httpd/httpd/trunk .
-     +1: elukey, ylavic, icing
-     ylavic: nice catch Luca, forgot about this one..
-
 
 PATCHES PROPOSED TO BACKPORT FROM TRUNK:
   [ New proposals should be added at the end of the list ]
